# Rust

./: Rust_Notes.xlsx  ~$Rust_Notes.xlsx
apts_api/: .env  Cargo.toml
apts_api/migrations/2019-12-12-154127_create_books/: down.sql  up.sql
apts_api/src/: lib.rs  main.rs  main_tst.rs  models.rs  routes.rs  schema.rs
apts_api/src/examples/: mod.rs  payments.rs
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs
crawler/: Cargo.toml
crawler/src/: main.rs
solo/: Cargo.toml
solo/src/: arrays.rs  closures.rs  coin.rs  conditionals.rs  enums.rs  hashmaps.rs  helpful_funcs.rs  ipadd.rs  lifetimes.rs  linkedlist.rs  loops.rs  main.rs  matches.rs  message.rs  minigrep.rs  options.rs  ownership.rs  pointers.rs  print.rs  rectangle.rs  restaurant.rs  structs.rs  traits.rs  trash.rs  vectors.rs
wasm_snake/: Cargo.toml
wasm_snake/src/: canvas.rs  direction.rs  main.rs  snake.rs
wasm_snake/static/: index.html
