[package]
name = "apts_api"
version = "0.1.0"
authors = ["Charles Roland <croland@costar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mysql = "*"

# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }

# For connecting with the MySQL database
# diesel = { version = "1.4.2", features = ["chrono"] }

# diesel_codegen = { version = "0.16.1", features = ["mysql"] }
# dotenv = "*"

# Lazy static initialization
lazy_static = "1.3.0"

# Rocket Webserver
# rocket = "0.4.2"
# rocket_contrib = { version = "0.4.0", features = ["json", "diesel_mysql_pool"] }
# rocket_codegen = "*"

rocket = "0.4.2"
rocket_codegen = "*"
rand = "*"

[dependencies.rocket_contrib]
version = "*" # "0.4.0-rc.2" # or use * 
default-features = false
features = ["handlebars_templates", "tera_templates"]



# Serialization/Deserialization
# serde_json = "1.0.39"
# serde = "1.0.90"
# serde_derive = "1.0.90"